# jibrel/investment/serializer.py
@@ -74,3 +74,11 @@ class InvestmentApplicationSerializer(CreateInvestmentApplicationSerializer):
             'updatedAt',
             'ownership'
         )
+
+
+class PersonalAgreementSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = PersonalAgreement
+        fields = (
+            'file',
+        )
